# apistar

./: .codecov.yml  .coveragerc  .flake8  .gitignore  .isort.cfg  .travis.yml  404.html  CNAME  LICENSE.md  Makefile  Pipfile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  scratch.md  setup.cfg  setup.py  sitemap.xml  tox.ini
api-documentation/: index.html
apistar/: __init__.py  apischema.py  app.py  authentication.py  cli.py  compat.py  conneg.py  core.py  db.py  decorators.py  docs.py  document.py  environment.py  exceptions.py  formats.py  handlers.py  hooks.py  http.py  interfaces.py  main.py  parse.py  parsers.py  permissions.py  pipelines.py  renderers.py  routing.py  schema.html  schema.py  schemas.py  settings.py  statics.py  templating.py  test.py  types.py  typesystem.py  util.py  utils.py  validators.py  worker.py  wsgi.py
client-library/: index.html
css/: base.css
docs/: api-client.md  api-documentation.md  client-library.md  documentation.md  index.md  making-api-requests.md  schema-validation.md  type-system.md  validation.md
docs-theme/: base.html  nav.html
making-api-requests/: index.html
schema-validation/: index.html
scripts/: README.md  ci  format  lint  publish  setup  test  tox
search/: search_index.json
tests/: test_apischema.py  test_app.py  test_authentication.py  test_authorization.py  test_cli.py  test_client.py  test_codecs.py  test_commandline.py  test_commands.py  test_db.py  test_dependency.py  test_docs.py  test_environment.py  test_event_hooks.py  test_exceptions.py  test_formats.py  test_http.py  (+18 more)
(+232 files in other folders)
